--- a/resources/css/event.css
+++ b/resources/css/event.css
@@ -14,9 +14,23 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 1000; /* Ajusta el índice z según sea necesario */
 }
+
+.custom_background {
+    background-image: url('../../public/img/event/event.webp');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    opacity: 0.8;
+}
+
